[package]
name = "dash-live-stream"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.1"
ctrlc = "3.1.4"
env_logger = { git = "https://github.com/SpiralP/env_logger_clear_line.git" }
error-chain = "0.12.2"
futures = "0.3.5"
log = "0.4.8"
num_cpus = "1.13.0"
openssl = { version = "0.10.29", optional = true }
tempfile = "3.1.0"
tokio = { version = "0.2.21", features = ["rt-core", "rt-threaded", "time"] }
warp = { git = "https://github.com/seanmonstar/warp.git" }

[features]
default = ["tls"]
tls = ["openssl", "warp/tls"]
