[package]
name = "dash-live-stream"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version="4", features = ["cargo"] }
ctrlc = "3"
env_logger = { git = "https://github.com/SpiralP/env_logger_clear_line.git" }
error-chain = "0.12"
futures = "0.3"
log = "0.4"
num_cpus = "1"
openssl = { version = "0.10", optional = true }
reqwest = "0.11"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
warp = "0.3"

[features]
default = []
tls = ["openssl", "warp/tls"]
